feat: Add controllers, models, and new views for contact and client management style: Update CSS styles and layout in banner, header, and body views chore: Include PHPMailer library for email handling feat: Add new images and favicon resources

--- a/assets/css/home-default.css
+++ b/assets/css/home-default.css
@@ -51,7 +51,7 @@
 .navbar-nav .active .nav-link:hover, 
 .navbar-nav .nav-item:hover > a, 
 .navbar-nav .nav-link:hover{
-    background-color: rgba(124, 139, 253, 0.9);
+    background-color: #282e67;
     color: var(--white);
 }
 .dropdown-toggle-arrow, 
